# basic_background_subtraction

./: CMakeLists.txt  README.md  main.cpp
